7446: Add ability to auto generate openapi yaml
